--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-MONGODB_URI=mongodb+srv://billybatchuluun:Z8uHgRsXK2XC4d64@cluster0.7mo5xbv.mongodb.net/
+MONGODB_URI=mongodb+srv://billybatchuluun:Z8uHgRsXK2XC4d64@cluster0.7mo5xbv.mongodb.net/food-delivery
